--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,44 @@
   ::-webkit-scrollbar-thumb:hover {
     background: #777;
   }
+
+  .demo-box {
+    display: inline-block;
+    width: 500px;
+    background: #ffffff;
+    padding: 15px 15px;
+    border-radius: 8px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 8px;
+    font-family: sans-serif;
+    font-size: 12px;
+    color: blue;
+  }
+  
+
+  [type="file"] {
+    padding: 8px 12px;
+    border: 2px solid rgb(4, 112, 76);
+    border-radius: 4px;
+    appearance: none;
+    position: relative;
+    overflow: hidden;
+    color: red;
+  
+    &::-webkit-file-upload-button,
+    &::file-selector-button {
+      position: absolute;
+      left: -1000px;
+      visibility: hidden;
+      margin-left: 10px;
+      height: 100%;
+      width: 0px;
+    }
+  }
+
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
